k8s/transaction-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-gateway
spec:
  replicas: 2
