k8s/transaction-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-gateway
spec:
  selector:
    app: transaction-gateway
  ports:
    - port: 80
      targetPort: 8080
